--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "paper-button": "^2.0.0",
     "iron-iconset": "^2.0.0",
     "iron-icons": "^2.0.1",
-    "iron-ajax": "^2.0.2"
+    "iron-ajax": "^2.0.2",
+    "paper-search": "^2.0.6"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3",
@@ -35,7 +36,13 @@
     "paper-ripple": "1 - 2",
     "paper-styles": "1 - 2",
     "iron-iconset-svg": "1 - 2",
-    "iron-icon": "1 - 2"
+    "iron-icon": "1 - 2",
+    "app-layout": "^2.0.0",
+    "iron-media-query": "1 - 2",
+    "iron-resizable-behavior": "1 - 2",
+    "iron-scroll-target-behavior": "1 - 2",
+    "iron-selector": "1 - 2",
+    "paper-icon-button": "^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
