--- a/bower.json
+++ b/bower.json
@@ -21,11 +21,13 @@
     "iron-iconset": "^2.0.0",
     "iron-icons": "^2.0.1",
     "iron-ajax": "^2.0.2",
-    "paper-search": "^2.0.6"
+    "paper-search": "^2.0.6",
+    "paper-tags-input": "^1.2.6",
+    "vaadin-grid": "3.0.0-alpha1"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3",
-    "iron-flex-layout": "1 - 2",
+    "iron-flex-layout": "^2.0.0",
     "iron-meta": "1 - 2",
     "paper-behaviors": "1 - 2",
     "iron-behaviors": "1 - 2",
@@ -33,16 +35,19 @@
     "iron-checked-element-behavior": "1 - 2",
     "iron-validatable-behavior": "1 - 2",
     "iron-form-element-behavior": "1 - 2",
-    "paper-ripple": "1 - 2",
-    "paper-styles": "1 - 2",
+    "paper-ripple": "^2.0.0",
+    "paper-styles": "^2.0.0",
     "iron-iconset-svg": "1 - 2",
-    "iron-icon": "1 - 2",
+    "iron-icon": "^2.0.0",
     "app-layout": "^2.0.0",
     "iron-media-query": "1 - 2",
     "iron-resizable-behavior": "1 - 2",
     "iron-scroll-target-behavior": "1 - 2",
     "iron-selector": "1 - 2",
-    "paper-icon-button": "^2.0.0"
+    "paper-icon-button": "^2.0.0",
+    "webcomponentsjs": "^1.0.0-rc.7",
+    "iron-input": "^2.0.0",
+    "iron-a11y-announcer": "^v2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
