--- a/bower.json
+++ b/bower.json
@@ -22,8 +22,10 @@
     "iron-icons": "^2.0.1",
     "iron-ajax": "^2.0.2",
     "paper-search": "^2.0.6",
-    "paper-tags-input": "^1.2.6",
-    "vaadin-grid": "3.0.0-alpha1"
+    "vaadin-grid": "3.0.0-alpha1",
+    "paper-dialog": "^2.0.0",
+    "isw-dropdown-menu": "IswPolymerElements/isw-dropdown-menu#^1.0.14",
+    "paper-styles": "^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3",
@@ -47,7 +49,8 @@
     "paper-icon-button": "^2.0.0",
     "webcomponentsjs": "^1.0.0-rc.7",
     "iron-input": "^2.0.0",
-    "iron-a11y-announcer": "^v2.0.0"
+    "iron-a11y-announcer": "^v2.0.0",
+    "paper-input": "^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
