--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "vaadin-grid": "3.0.0-alpha1",
     "paper-dialog": "^2.0.0",
     "isw-dropdown-menu": "IswPolymerElements/isw-dropdown-menu#^1.0.14",
-    "paper-styles": "^2.0.0"
+    "paper-styles": "^2.0.0",
+    "iron-doc-viewer": "^3.0.3"
   },
   "resolutions": {
     "polymer": "^2.0.0",
@@ -51,7 +52,8 @@
     "iron-input": "^2.0.0",
     "iron-a11y-announcer": "^v2.0.0",
     "paper-input": "^2.0.0",
-    "font-roboto": "^1.0.1"
+    "font-roboto": "^1.0.1",
+    "iron-location": "1 - 2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
