--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,9 @@
     "paper-dialog": "^2.0.0",
     "isw-dropdown-menu": "IswPolymerElements/isw-dropdown-menu#^1.0.14",
     "paper-styles": "^2.0.0",
-    "iron-doc-viewer": "^3.0.3"
+    "iron-doc-viewer": "^3.0.3",
+    "paper-tooltip": "^2.0.0",
+    "iron-collapse": "^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0",
